--- a/src/styles/StorySection.module.scss
+++ b/src/styles/StorySection.module.scss
@@ -74,8 +74,8 @@
     font-weight: $font_regular;
     letter-spacing: 0px;
     @media screen and (max-width: $mobile_breakpoint) {
-        font-size: 13px;
-        line-height: 18px;
+        font-size: 14px;
+        line-height: 19px;
         font-weight: $font_medium;
     }
 }
